# codex-bridge

./: GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-deps.yml
src/codex_bridge/: __init__.py  cli.py  codex.py  config.py  server.py
src/codex_openai_api/: auth.py  cli.py  codex.py  config.py  conversion.py  server.py
tests/: test_gateway.py
