[project]
name = "codex-openai-api"
version = "0.1.0"
description = "OpenAI-compatible Chat Completions gateway for OpenAI Codex OAuth"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "typer>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

[project.scripts]
codex-openai-api = "codex_openai_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_openai_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
